# anorm

./: .coveragerc  .gitignore  Makefile  README.md  playground.py  pyproject.toml
anorm/core/: __init__.py  conditions.py  expceptions.py  model.py  session.py
anorm/core/columns/: __init__.py
tests/columns/: test_simple_types.py
tests/models/: test_create_instance.py
