[tool.poetry]
name = "anorm"
version = "0.0.1"
description = ""
authors = ["Андрей Михин <mikhinandrei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
asyncpg = "^0.22.0"
black = "^21.5b1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
